<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        tools:context=".ui.login.LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_logo"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"
                style="@style/title14"
                android:text="@string/app_name"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_30sdp"
            style="@style/title14"
            android:text="Selamat Datang Di My Store"/>
        <TextView
            style="@style/body12"
            android:text="Masuk terlebih dahulu untuk menggunakan aplikasi"/>

        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/body12"
            android:text="@string/teks_username"/>
        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_border_abu"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparant"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/body12"
            android:text="Password"/>
        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_border_abu"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparant"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_masuk"
            android:text="Masuk"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/button_main"/>

        <LinearLayout
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark2"
                android:textSize="@dimen/_12sdp"
                android:text="@string/belum_punya_akun"/>

            <TextView
                android:id="@+id/tv_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="@dimen/_6sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/buat_sekarang"/>

        </LinearLayout>
    </LinearLayout>
</layout>