<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_10sdp"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    style="@style/title14"
                    android:text="@string/app_name"/>
            </LinearLayout>

        </RelativeLayout>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:shimmer_duration="300">

            <include layout="@layout/placeholder_produk" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/div_kosong"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_product" />

                <TextView

                    android:textAlignment="center"
                    style="@style/title12"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/teks_tidak_ada_data" />

                <TextView
                    android:textAlignment="center"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    style="@style/body10"
                    android:layout_gravity="center"
                    android:text="@string/teks_detail_message_kosong" />

                <TextView
                    android:id="@+id/tv_reload"
                    android:background="@drawable/background_border_abu"
                    android:textColor="@color/abu_pekat"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_gravity="center"
                    style="@style/body10"
                    android:text="@string/teks_muat_ulang"/>

            </LinearLayout>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_cari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_height="match_parent"
                    android:id="@+id/swipe">
                    <androidx.recyclerview.widget.RecyclerView
                        tools:itemCount="10"

                        tools:listitem="@layout/item_produk"
                        android:id="@+id/rv_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/float_add"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="Add Product"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

    </LinearLayout>
</layout>